--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -67,7 +67,7 @@ jobs:
     name: Release build artifacts for the testing branch
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'ref/head/testing'
+    if: github.ref == 'refs/heads/testing'
     steps:
     - name: Release tip build
       uses: eine/tip@master
